syntax = "proto3";

enum Attribute {
    ATTRIBUTE_AGILITY = 0;
    ATTRIBUTE_DEXTERITY = 1;
    ATTRIBUTE_INTELLIGENCE = 2;
    ATTRIBUTE_MIND = 3;
    ATTRIBUTE_STRENGTH = 4;
    ATTRIBUTE_VIGOR = 5;
    ATTRIBUTE_VITALITY = 6;
}
