syntax = "proto3";

import "party.proto";
import "target.proto";

message AttackEvent {
    repeated Target targets = 1;
}

message SkillEvent {
    string skill = 2;
    repeated Target targets = 1;
}

message ConsumableEvent {
    string consumable = 2;
    repeated Target targets = 1;
}

message CombatEvent {
    oneof event {
        AttackEvent attack_event = 1;
        ConsumableEvent consumable_event = 2;
        string equipable_event = 3;
        bool forfeit_event = 4;
        bool skip_event = 5;
        SkillEvent skill_event = 6;
    }
}
