syntax = "proto3";

import "dot.proto";
import "gender.proto";
import "modifier.proto";

message Combatant {
    string name = 1;
    Gender gender = 2;
    repeated string skills = 3;

    uint32 hp = 4;
    uint32 fatigue = 5;
    repeated DOT dots = 6;

    uint32 agility = 7;
    uint32 dexterity = 8;
    uint32 intelligence = 9;
    uint32 mind = 10;
    uint32 strength = 11;
    uint32 vigor = 12;
    uint32 vitality = 13;

    string bodywear = 14;
    string footwear = 15;
    string handwear = 16;
    string headwear = 17;
    string legwear = 18;
    string weapon = 19;

    repeated Modifier agility_modifiers = 20;
    repeated Modifier dexterity_modifiers = 21;
    repeated Modifier intelligence_modifiers = 22;
    repeated Modifier mind_modifiers = 23;
    repeated Modifier strength_modifiers = 24;
    repeated Modifier vigor_modifiers = 25;
    repeated Modifier vitality_modifiers = 26;
}
