syntax = "proto3";

import "aspect.proto";

message DOT {
    Aspect aspect = 1;
    uint32 damage_value = 2;
    oneof lifetime {
        uint32 lifetime_duration = 3;
    }
}
